--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
     --base-font-size:       16px;
     --menu-font-size:       18px;
 
-    --border-radius-large:  100px;
+    --border-radius-large:  14px 2px 14px 2px;
     --border-radius-small:  5px;
   }
 
