update color nav

--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@
   :root {
     --primary-color:        #00c1d3;
     --secondary-color:      #4effff;
-    --white-color:          #ffffff;
+    --white-color:          #ffffffc7;
     --dark-color:           #000000;
     --servicio-bg:          #ffffff;
-    --menu-bg:              #ffffff;
+    --menu-bg:              #000000;
 
     --title-color:          #ffffff;
     --gray-color:           #ffffff;
