--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 /*---------------------------------------
   CUSTOM PROPERTIES ( VARIABLES )             
 -----------------------------------------*/
@@ -791,7 +789,6 @@ strong {
   box-shadow: none;
   border: 2px solid var(--border-color);
   color: var(--p-color);
-  margin-bottom: 24px;
   padding-top: 13px;
   padding-bottom: 13px;
   outline: none;
@@ -911,8 +908,8 @@ estilos validacion  del formulario
 
 .error {
   color: rgb(255, 0, 81);
-  font-size: 14px;
-  margin-top: 6px;
+  font-size: 12px;
+  margin: 7px;
 }
 
 
@@ -951,7 +948,7 @@ estilos validacion  del formulario
   justify-content: center;
 }
 .message .success{
-  font-size: 20px;
+  font-size: 10px;
   color: rgb(15, 189, 90);
   position: absolute;
   animation: buttons .3s linear;
@@ -959,7 +956,7 @@ estilos validacion  del formulario
 }
 
 .message .danger{
-  font-size: 20px;
+  font-size: 10px;
   color:  rgb(255, 0, 81);
   position: absolute;
   transition: .3s;
