--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ strong {
   flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
-  background: none repeat scroll 0 0 var(--white-color);
+  background: none repeat scroll 0 0 var(--secondary-color);
 }
 
 .spinner {
@@ -908,7 +908,7 @@ estilos validacion  del formulario
 
 .error {
   color: rgb(255, 0, 81);
-  font-size: 12px;
+  font-size: 14px;
   margin: 7px;
 }
 
