--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@
 -----------------------------------------*/
 :root {
   --white-color:                  #ffffff;
-  --primary-color:                #292341;
-  --secondary-color:              #db438a;
+  --primary-color:                #0E4029;
+  --secondary-color:              #00BF65;
   --section-bg-color:             #f9f9f9;
   --dark-color:                   #000000;
   --p-color:                      #717275;
@@ -172,7 +172,7 @@ strong {
   flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
-  background: none repeat scroll 0 0 var(--white-color);
+  background: none repeat scroll 0 0 var(--secondary-color);
 }
 
 .spinner {
