add margin to sms errr

--- a/css/style.css
+++ b/css/style.css
@@ -391,7 +391,7 @@ aside.animate {
 .success,
 .danger {
   padding: 10px;
-  margin-bottom: 10px;
+  margin-block: 10px;
   border-radius: 4px;
   font-weight: bold;
 }
